--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 	<title>Riley Stuff</title>
 
+	<link type="stylesheet" src="/styles/d3.css" />
 </head>
 <body>
 
@@ -21,8 +22,7 @@
 
 
 
-
-
-	<script src="/app.js"></script>
+	<script src="http://d3js.org/d3.v3.min.js"></script>
 	<script src="http://labratrevenge.com/d3-tip/javascripts/d3.tip.v0.6.3.js"></script>
+	<script src="scripts/barchart.js"></script>
 </body>
