--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<title>Riley Stuff</title>
 
-	<link type="stylesheet" src="/styles/d3.css" />
+	<link type="text/css" rel="stylesheet" href="styles/d3.css" />
 </head>
 <body>
 
